examples/good/00-ErrorOmitted.tms
void main() {

  if (false) {
    error();
  } else {
    printBool(true);
  }

  return;
}