examples/bad/03-VoidAssignment.tms
void main() {
  void x = main();
  return;
}